docs/api/qiskit/0.19/qiskit.qobj.PulseQobjExperimentConfig.mdx
---
title: PulseQobjExperimentConfig (v0.19)
description: API reference for qiskit.qobj.PulseQobjExperimentConfig in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobjExperimentConfig
---

# PulseQobjExperimentConfig

<Class id="qiskit.qobj.PulseQobjExperimentConfig" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/qobj/pulse_qobj.py" signature="PulseQobjExperimentConfig(qubit_lo_freq=None, meas_lo_freq=None, **kwargs)" modifiers="class">
  A config for a single Pulse experiment in the qobj.

  Instantiate a PulseQobjExperimentConfig object.

  **Parameters**

  *   **qubit\_lo\_freq** (*list*) – List of frequencies (as floats) for the qubit driver LO’s in GHz.
  *   **meas\_lo\_freq** (*list*) – List of frequencies (as floats) for the’ measurement driver LO’s in GHz.
  *   **kwargs** – Additional free form key value fields to add to the configuration

  ## Methods

  <span id="pulseqobjexperimentconfig-from-dict" />

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobjExperimentConfig.from_dict" signature="PulseQobjExperimentConfig.from_dict(data)" modifiers="classmethod">
    Create a new QobjHeader object from a dictionary.

    **Parameters**

    **data** (*dict*) – A dictionary representing the QobjHeader to create. It will be in the same format as output by [`to_dict()`](qiskit.qobj.PulseQobjExperimentConfig#to_dict "qiskit.qobj.PulseQobjExperimentConfig.to_dict").

    **Returns**

    The QobjDictField from the input dictionary.

    **Return type**

    QobjDictFieldr
  </Function>

  <span id="pulseqobjexperimentconfig-to-dict" />

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobjExperimentConfig.to_dict" signature="PulseQobjExperimentConfig.to_dict()">
    Return a dictionary format representation of the QASM Qobj.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    dict
  </Function>
</Class>

