docs/api/qiskit/1.2/qiskit.qobj.PulseQobjExperimentConfig.mdx
---
title: PulseQobjExperimentConfig (v1.2)
description: API reference for qiskit.qobj.PulseQobjExperimentConfig in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.qobj.PulseQobjExperimentConfig
---

# PulseQobjExperimentConfig

<Class id="qiskit.qobj.PulseQobjExperimentConfig" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/pulse_qobj.py#L506-L530" signature="qiskit.qobj.PulseQobjExperimentConfig(qubit_lo_freq=None, meas_lo_freq=None, **kwargs)" modifiers="class">
  Bases: `QobjDictField`

  A config for a single Pulse experiment in the qobj.

  Instantiate a PulseQobjExperimentConfig object.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.qobj.pulse_qobj.PulseQobjExperimentConfig` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The Qobj class and related functionality are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires Qobj it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **qubit\_lo\_freq** (*List\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*) – List of qubit LO frequencies in GHz.
  *   **meas\_lo\_freq** (*List\[*[*float*](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")*]*) – List of meas readout LO frequencies in GHz.
  *   **kwargs** – Additional free form key value fields to add to the configuration

  ## Methods

  ### from\_dict

  <Function id="qiskit.qobj.PulseQobjExperimentConfig.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/common.py#L51-L63" signature="from_dict(data)" modifiers="classmethod">
    Create a new QobjHeader object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the QobjHeader to create. It will be in the same format as output by [`to_dict()`](#qiskit.qobj.PulseQobjExperimentConfig.to_dict "qiskit.qobj.PulseQobjExperimentConfig.to_dict").

    **Returns**

    The QobjDictField from the input dictionary.

    **Return type**

    QobjDictFieldr
  </Function>

  ### to\_dict

  <Function id="qiskit.qobj.PulseQobjExperimentConfig.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/qobj/common.py#L43-L49" signature="to_dict()">
    Return a dictionary format representation of the OpenQASM 2 Qobj.

    **Returns**

    The dictionary form of the QobjHeader.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

